src/objects/CventEvents__AttendeeActivity__c.object
<CustomObject>
    <description>Represents activity an attendee does before, during and after an event.</description>
    <fields>
        <fullName>CventEvents__ActivityStub__c</fullName>
        <externalId>true</externalId>
        <label>Activity Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__AttendeeName__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Lead__c),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__c, CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__c, CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName))</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>CventEvents__Attendee__c</referenceTo>
        <relationshipLabel>Attendee Activities</relationshipLabel>
        <relationshipName>AttendeeActivities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendee Activities</relationshipLabel>
        <relationshipName>AttendeeActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__DisplayType__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventTitle__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__r.CventEvents__pkg_Title__c, &quot;&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__c, CventEvents__Event__r.CventEvents__pkg_Title__c)</formula>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>Attendee Activities</relationshipLabel>
        <relationshipName>AttendeeActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Attendee Activities</relationshipLabel>
        <relationshipName>AttendeeActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__ObjectName__c</fullName>
        <description>Contains name of the related entity.</description>
        <inlineHelpText>Contains name of the related entity.</inlineHelpText>
        <label>Related Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ObjectStub__c</fullName>
        <description>Contains Cvent stub of the related entity.</description>
        <externalId>true</externalId>
        <inlineHelpText>Contains Cvent stub of the related entity.</inlineHelpText>
        <label>Object Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ObjectType__c</fullName>
        <description>Contains type of the related entity.</description>
        <inlineHelpText>Contains type of the related entity.</inlineHelpText>
        <label>Related Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Timestamp__c</fullName>
        <label>Activity Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cvent Attendee Activity</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__AttendeeName__c</columns>
        <columns>CventEvents__EventTitle__c</columns>
        <columns>CventEvents__DisplayType__c</columns>
        <columns>CventEvents__ObjectName__c</columns>
        <columns>CventEvents__ObjectType__c</columns>
        <columns>CventEvents__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Attendee Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Attendee Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>